force-app/main/default/objects/CookieConsentCategory__c/CookieConsentCategory__c.object-meta.xml
<CustomObject>
    <label>Cookie Consent Category</label>
    <nameField>
        <label>Cookie Consent Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cookie Consent Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>