force-app/main/default/objects/CookieConsentCategory__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The category notes that will be displayed to the user viewing the cookie consent modal.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>