force-app/main/default/objects/CookieConsentCategory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manditory__c</columns>
    <columns>DefaultValue__c</columns>
    <columns>Description__c</columns>
    <columns>AdditionalInformation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>